--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "animate.css": "^4.1.1",
-    "gsap-trial": "^3.12.7",
+    "gsap": "^3.14.2",
     "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "react": "18.3.1",
